--- a/historia.html
+++ b/historia.html
@@ -379,7 +379,7 @@
             <p class="mb-0">Visitá nuestros museos y puntos históricos o sumate a una visita guiada.</p>
           </div>
           <div class="col-md-4 text-md-right mt-3 mt-md-0">
-            <a href="about.html" class="btn btn-light btn-lg mr-2">Museos</a>
+            <a href="museos.html" class="btn btn-light btn-lg mr-2">Museos</a>
             <a href="contact.html" class="btn btn-outline-light btn-lg">Visitas guiadas</a>
           </div>
         </div>
@@ -387,102 +387,72 @@
     </div>
   </section>
   <!-- ===================== /Historia ===================== -->
-
-  <!-- Footer Start (puedes personalizar) -->
-  <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
-    <div class="row pt-5">
-      <div class="col-lg-3 col-md-6 mb-5">
-        <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza" style="height:40px;width:auto">
-        <p class="mt-3">Miramar de Ansenuza, puerta de entrada al Parque Nacional. Naturaleza, historia y atardeceres únicos.</p>
-        <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Seguinos</h6>
-        <div class="d-flex justify-content-start">
+     <!-- Footer (limpio) -->
+  <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 40px;">
+    <div class="row pt-4">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <a href="index.html" class="navbar-brand d-inline-flex align-items-center mb-2">
+          <img src="img/logo-miramar.png" alt="Miramar de Ansenuza" style="height:34px;width:auto;">
+        </a>
+        <p class="mt-2">
+          Miramar de Ansenuza, puerta del Parque y Reserva Nacional Ansenuza. Atardeceres únicos y avistaje de aves en la laguna salada más grande de Sudamérica.
+        </p>
+        <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 4px;">Seguinos</h6>
+        <div class="d-flex">
           <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/turismomiramardeansenuza/"><i class="fab fa-facebook-f"></i></a>
           <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Secciones</h5>
-        <div class="d-flex flex-column justify-content-start">
-          <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Acerca de</a>
+
+      <div class="col-lg-4 col-md-6 mb-4">
+        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Navegación</h5>
+        <div class="d-flex flex-column">
+          <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+          <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
           <a class="text-white-50 mb-2" href="package.html"><i class="fa fa-angle-right mr-2"></i>Alojamientos</a>
-          <a class="text-white-50 mb-2" href="gastronomia.html"><i class="fa fa-angle-right mr-2"></i>Gastronomía</a>
-          <a class="text-white-50 mb-2" href="Actividades.html"><i class="fa fa-angle-right mr-2"></i>Actividades</a>
           <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contacto</h5>
-        <p><i class="fa fa-map-marker-alt mr-2"></i>Buenos Aires 200, Miramar de Ansenuza</p>
+
+      <div class="col-lg-4 col-md-6 mb-4">
+        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Contacto</h5>
+        <p><i class="fa fa-map-marker-alt mr-2"></i>Miramar de Ansenuza, Córdoba, Argentina</p>
         <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
         <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
-        <div class="w-100">
-          <div class="input-group">
-            <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Tu email" />
-            <div class="input-group-append">
-              <button class="btn btn-primary px-3">Suscribirme</button>
-            </div>
-          </div>
-        </div>
+        <a class="btn btn-success btn-block mt-2" target="_blank" rel="noopener" href="https://wa.me/5493563XXXXXX">
+          <i class="fab fa-whatsapp mr-2"></i>Escribinos por WhatsApp
+        </a>
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
+
+  <div class="container-fluid bg-dark text-white border-top py-3 px-sm-3 px-md-5" style="border-color: rgba(255,255,255,.08) !important;">
     <div class="row">
-      <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-        <p class="m-0 text-white-50">© <span id="year"></span> Miramar de Ansenuza. Todos los derechos reservados.</p>
+      <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
+        <small class="m-0 text-white-50">© <span id="year"></span> Municipalidad de Miramar de Ansenuza. Todos los derechos reservados.</small>
       </div>
-      <div class="col-lg-6 text-center text-md-right">
-        <p class="m-0 text-white-50">Diseño base: <a href="https://htmlcodex.com">HTML Codex</a></p>
+      <div class="col-md-6 text-center text-md-right">
+        <small class="m-0 text-white-50">Sitio oficial de Turismo</small>
       </div>
     </div>
   </div>
-  <!-- Footer End -->
+  <!-- /Footer -->
 
   <!-- Back to Top -->
   <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-  <!-- JavaScript Libraries -->
+  <!-- Scripts -->
+  <script>
+    // Año automático
+    (function () {
+      var el = document.getElementById('year');
+      if (el) el.textContent = new Date().getFullYear();
+    })();
+  </script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-  <script src="lib/tempusdominus/js/moment.min.js"></script>
-  <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-  <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-  <!-- Contact Javascript File -->
-  <script src="mail/jqBootstrapValidation.min.js"></script>
-  <script src="mail/contact.js"></script>
-
-  <!-- Template Javascript -->
+  <script src="lib/easing/easing.min.js"></script>
   <script src="js/main.js"></script>
-
-  <!-- Inicialización de carruseles + utilidades -->
-  <script>
-    (function($){
-      function initTl(selector){
-        $(selector).owlCarousel({
-          items: 1,
-          loop: true,
-          margin: 0,
-          autoplay: true,
-          autoplayTimeout: 3500,
-          autoplayHoverPause: true,
-          dots: true,
-          nav: true,
-          navText: ["",""], // Flechas via CSS ::after
-          smartSpeed: 500
-        });
-      }
-      $(function(){
-        ['#tl-1911','#tl-1938','#tl-1977','#tl-2022','#tl-hoy'].forEach(initTl);
-        // Año automático en el footer
-        document.getElementById('year').textContent = new Date().getFullYear();
-      });
-    })(jQuery);
-  </script>
 </body>
 </html>
