--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Acerca de</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
+                         <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
                     </div>
                 </div>
             </nav>
