--- a/cabañas.html
+++ b/cabañas.html
@@ -131,12 +131,12 @@
       <div class="container">
         <div class="filters-box">
           <div class="row text-center">
-            <div class="col-md-2"><div class="mb-2"><a href="#" class="nav-item nav-link active">Todos</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="todos.html" class="nav-item nav-link active">Todos</a></div></div>
             <div class="col-md-2"><div class="mb-2"><a href="cabañas.html" class="nav-item nav-link active">Cabañas</a></div></div>
             <div class="col-md-2"><div class="mb-2"><a href="campings.html" class="nav-item nav-link active">Campings</a></div></div>
             <div class="col-md-2">
               <div class="mb-2" style="position:relative;">
-                <a href="#" class="nav-item nav-link active"
+                <a href="departamentos.html" class="nav-item nav-link active"
                    onmouseover="this.nextElementSibling.style.display='block';"
                    onmouseout="setTimeout(()=>{ if(!this.nextElementSibling.matches(':hover')) this.nextElementSibling.style.display='none'; },120);">
                   Departamentos
