--- a/package.html
+++ b/package.html
@@ -26,73 +26,169 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 
+<style>
+    /* --------- Header / Hero --------- */
+    .page-header-ansenuza{
+      position:relative; color:#fff;
+      background-position:center; background-size:cover; background-repeat:no-repeat;
+      min-height: 380px;
+    }
+    .page-header-ansenuza::after{
+      content:""; position:absolute; inset:0;
+      background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.45));
+    }
+    .page-header-ansenuza .hero-wrap{
+      position:relative; z-index:2; min-height:380px; padding:60px 0;
+      text-align:center;
+    }
+    .hero-kicker{
+      display:inline-block; background:#eaf0ff; color:#1e3a6d; font-weight:600;
+      padding:.35rem .75rem; border-radius:999px; margin-bottom:10px; letter-spacing:.08em;
+    }
+    .hero-title{ font-weight:700; margin:0 0 .5rem; }
+    .hero-accent{ background:linear-gradient(90deg,#fff, #dbeafe); -webkit-background-clip:text; background-clip:text; color:transparent; }
+    .hero-subtitle{ margin:0 0 12px; font-size:1.05rem; }
+
+    /* --------- Sección Historia --------- */
+    .historia-section{
+      position:relative; padding:80px 0 40px;
+      background: linear-gradient(180deg, rgba(30,58,109,.06), rgba(30,58,109,0)), #fff;
+    }
+    .historia-lead{ max-width:900px; margin:0 auto 1.5rem; font-size:1.1rem; }
+
+    /* Línea central */
+    .timeline{ position:relative; padding:40px 0; }
+    .timeline::before{
+      content:""; position:absolute; top:0; bottom:0; left:50%;
+      width:3px; background:linear-gradient(180deg,#e5e7eb,#cbd5e1); transform:translateX(-50%);
+    }
+
+    .timeline-item{ position:relative; margin-bottom:40px; }
+    .timeline-bullet{
+      position:absolute; top:16px; left:50%; transform:translate(-50%,-50%);
+      width:46px; height:46px; border-radius:50%; background:#fff; border:3px solid #1e3a6d;
+      display:flex; align-items:center; justify-content:center; font-weight:700; color:#1e3a6d;
+      box-shadow:0 6px 16px rgba(0,0,0,.08);
+    }
+    .timeline-col{ width:50%; padding:0 20px; }
+    .timeline-left{ float:left; clear:left; }
+    .timeline-right{ float:right; clear:right; }
+
+    .timeline-card{
+      background:#fff; border:1px solid #eef2f7; border-radius:14px;
+      box-shadow:0 8px 24px rgba(0,0,0,.06); overflow:hidden;
+      transition:transform .25s ease, box-shadow .25s ease;
+    }
+    .timeline-card:hover{ transform:translateY(-3px); box-shadow:0 16px 36px rgba(0,0,0,.10); }
+
+    /* Galería (OwlCarousel) */
+    .timeline-media{ height:220px; width:100%; object-fit:cover; display:block; }
+    .timeline-card .owl-dots{ text-align:center; margin:8px 0 0; }
+    .timeline-card .owl-dot span{
+      width:8px; height:8px; margin:3px; display:block; border-radius:999px; background:#c7d2fe;
+    }
+    .timeline-card .owl-dot.active span{ background:#1e3a6d; }
+    .timeline-card .owl-nav{
+      position:absolute; inset:0; display:flex; align-items:center; justify-content:space-between;
+      pointer-events:none; padding:0 8px;
+    }
+    .timeline-card .owl-nav button{
+      pointer-events:auto; width:34px; height:34px; border-radius:999px;
+      background:rgba(255,255,255,.9)!important; border:1px solid #e5e7eb;
+      display:flex; align-items:center; justify-content:center; line-height:1;
+      transition:transform .2s ease;
+    }
+    .timeline-card .owl-nav button:hover{ transform:scale(1.06); }
+    .timeline-card .owl-nav .owl-prev::after{ content:"‹"; font-size:20px; color:#1e3a6d; }
+    .timeline-card .owl-nav .owl-next::after{ content:"›"; font-size:20px; color:#1e3a6d; }
+
+    .timeline-body{ padding:18px 18px 16px; }
+    .timeline-year{ font-weight:700; color:#1e3a6d; margin:0 0 6px; }
+    .timeline-title{ margin:0 0 6px; }
+    .timeline-tags{ display:flex; flex-wrap:wrap; gap:.5rem; margin-top:.5rem; }
+    .chip{
+      font-size:.85rem; padding:.25rem .6rem; border-radius:999px;
+      background:#f3f4f6; border:1px solid #e5e7eb; color:#374151;
+    }
+
+    /* CTA */
+    .historia-cta{
+      margin-top:30px; background:linear-gradient(135deg,#1e3a6d,#2d4d9b);
+      color:#fff; border-radius:16px; padding:24px; box-shadow:0 10px 28px rgba(30,58,109,.28);
+    }
+
+    /* Responsive */
+    @media (max-width: 991.98px){
+      .timeline::before{ left:28px; }
+      .timeline-bullet{ left:28px; transform:translate(-50%,-50%); }
+      .timeline-col{ width:100%; padding-left:64px; padding-right:0; float:none; }
+      .timeline-left, .timeline-right{ float:none; }
+      .page-header-ansenuza, .page-header-ansenuza .hero-wrap{ min-height:320px; }
+    }
+  </style>
+</head>
+
 <body>
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-light pt-3 d-none d-lg-block">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                    <div class="d-inline-flex align-items-center">
-                        <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
-                        <p class="text-body px-3">|</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
-                    </div>
-                </div>
-                <div class="col-lg-6 text-center text-lg-right">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="text-primary px-3" href="https://www.facebook.com/turismomiramardeansenuza/">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a class="text-primary px-3" href="https://www.instagram.com/miramardeansenuza/">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
+  <!-- Topbar -->
+  <div class="container-fluid bg-light pt-3 d-none d-lg-block">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
+          <div class="d-inline-flex align-items-center">
+            <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
+            <p class="text-body px-3">|</p>
+            <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
+          </div>
         </div>
-    </div>
-    <!-- Topbar End -->
-
-
-    <!-- Navbar Start -->
-    <div class="container-fluid position-relative nav-bar p-0">
-        <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
-            <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
-               <a href="index.html" class="navbar-brand d-flex align-items-center">
-                    <img
-                      src="img/logo-miramar.png"
-                      srcset="img/logo-miramar@2x.png 2x"
-                      alt="Miramar de Ansenuza"
-                      class="logo-miramar"
-                    >
-                    <span class="sr-only">Miramar de Ansenuza</span>
-                </a>    
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        
-                        <a href="service.html" class="nav-item nav-link">Acerca de</a>
-                        <a href="package.html" class="nav-item nav-link active">Alojamientos</a>
-                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
-                    </div>
-                </div>
-            </nav>
+        <div class="col-lg-6 text-center text-lg-right">
+          <div class="d-inline-flex align-items-center">
+            <a class="text-primary px-3" href="https://www.facebook.com/turismomiramardeansenuza/" aria-label="Facebook">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a class="text-primary px-3" href="https://www.instagram.com/miramardeansenuza/" aria-label="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
         </div>
+      </div>
     </div>
-    <!-- Navbar End -->
+  </div>
+  <!-- /Topbar -->
 
+  <!-- Navbar -->
+  <div class="container-fluid position-relative nav-bar p-0">
+    <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
+      <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
+        <a href="index.html" class="navbar-brand d-flex align-items-center">
+          <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza" style="height:40px;width:auto" />
+          <span class="sr-only">Miramar de Ansenuza</span>
+        </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
+          <div class="navbar-nav ml-auto py-0">
+            <a href="index.html" class="nav-item nav-link">Inicio</a>
+            <a href="about.html" class="nav-item nav-link">Acerca de</a>
+              <a href="package.html" class="nav-item nav-link active">Alojamientos</a>
+            <a href="contact.html" class="nav-item nav-link">Contacto</a>
+           
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+  <!-- /Navbar -->
 
-    <!-- Header Start -->
-    <header class="page-header-ansenuza"
+<!-- Header -->
+<header class="page-header-ansenuza"
         style="background-image:url('img/flamencos.jpg'); background-position:center; background-size:cover;">
   <div class="container">
     <div class="hero-wrap d-flex flex-column align-items-center justify-content-center">
-      <span class="hero-kicker">Oficina de Turismo</span>
-      <h1 class="hero-title"><span class="hero-accent">Alojamientos</span></h1>
-      <p class="hero-subtitle">Estamos para ayudarte</p>
+      <span class="hero-kicker">Alojamientos </span>
+     <h1 class="hero-title"><span class="hero-accent">Tu lugar de descanso</span></h1>
+
+      <p class="hero-subtitle">Cabañas, Departamentos, Camping y Hoteles</p>
 
       <nav aria-label="breadcrumb" class="hero-breadcrumb">
         <ol class="breadcrumb justify-content-center">
@@ -103,7 +199,7 @@
     </div>
   </div>
 </header>
-    <!-- Header End -->
+
 
 
   <!-- Booking Start -->
